add: 1.21.9 as Pre.1 add: KeyCategoryWrapper.java for compat with 1.21.9+